2005-04-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSDragView.m: when dragging, use the mouse offset to adjust
	the initial position of the dragged image.
	Modified internally to pass the original position of the image so
	that slideback can slide to that position rather than the position
	the mouse started from.  This makes no difference if the initial
	mouse offset was zero, but does have an effect if the drag was
	initiated by a mouse move at a location offset from the original
	mouse down.
	Exposed a couple of methods for subclasses.
	* Source/NSColorPanel.m: Set image position for DnD so that color
	swatch is centered on the mouse position.
	* Source/NSImageView.m: ditto
	* Source/NSTableView.m: ([-mouseDown:]) after calling the
	([-dragImageForRows:event:dragImageOffset:]) method, use the
	returned offset to position the center of the image relative
	to the mouse pointer .. I *think* that's what the apple documentation
	of the method means.

2005-03-30  Adam Fedor  <fedor@gnu.org>

	* Version 0.9.5

	* Headers/AppKit/NSDataLinkManager.h, Source/NSDataLinkManager.m: 
	Partially revert 2005-03-05 patch for this release.

2005-03-29 Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/NSWorkspace.m (-_extIconForApp:info:): Check filename is
	not empty string before passing to [NSBunder -pathForImageResource:].

2005-03-29 Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/NSGraphicsContext.m: Undeprecate DPSxshow, DPSyshow,
	DPSxyshow, DPSashow, DPSwidthshow, and DPSawidthshow.

2005-03-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSDragView.m:
	* Headers/Additions/GNUstepGUI/GSDragView.h: Minor tweaks to ease
	subclassing.

2005-03-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSDragView.m: Fix a few bugs exposed by windows port and
	tidy/add comments to clarify operation.  When initiating DnD session,
	take offset argument into account rather than ignoring it.
	* Headers/Additions/GNUstepGUI/GSDragView.h: Improve comments and